# seasonal-kampo-guide

./: README.md  app.py  pyproject.toml  routes.py
data/: disease_data.json
static/css/: style.css
static/js/: script.js
templates/: base.html  disease.html  index.html  month.html
